--- a/jenkins-nginx/Dockerfile
+++ b/jenkins-nginx/Dockerfile
@@ -1,7 +1,6 @@
 FROM nginx:mainline-alpine
 
-RUN rm /etc/nginx/conf.d/default.conf
-COPY jenkins.conf /etc/nginx/conf.d/jenkins.conf
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY ./jenkins.conf /etc/nginx/conf.d/jenkins.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx"]
