--- a/jenkins-nginx/Dockerfile
+++ b/jenkins-nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:mainline-alpine
+FROM nginx
 
 COPY ./jenkins.conf /etc/nginx/conf.d/jenkins.conf
 #COPY ./nginx.conf /etc/nginx/nginx.conf
