--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,10 @@ services:
     nginxs5:
         build: ./jenkins-nginx
         container_name: nginxs5
+        link: jenkinss5
         volumes:
            - type: bind
-             source: ./jenkins-nginx/nginx.conf
+             source: ./jenkins-nginx/jenkins.conf
              target: /etc/nginx/conf.d/default.conf
         ports:
         - 80:80
