--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,19 @@ services:
         restart: always
         ports:
         - 8080:8080
+        - 50000:50000
         volumes:
           - jenkins-log:/var/log/jenkins
           - jenkins-data:/var/jenkins_home
     nginxs5:
         build: ./jenkins-nginx
         container_name: nginxs5
-        link: jenkinss5
-        volumes:
-           - type: bind
-             source: ./jenkins-nginx/jenkins.conf
-             target: /etc/nginx/conf.d/default.conf
+        links:
+          - jenkinss5
+#        volumes:
+#           - type: bind
+#             source: ./jenkins-nginx/jenkins.conf
+#             target: /etc/nginx/conf.d/default.conf
         ports:
         - 80:80
         - 443:443
