--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.7'
 
 services:
     jenkinss5:
-        image: docker.io/bitnami/jenkins:2
-        container_name: jenkinss5
+        image: docker.io/bitnami/jenkins
+        container_name: jenkins
         networks:
           - jenkins-net
         restart: always
@@ -15,13 +15,13 @@ services:
           - jenkins-data:/var/jenkins_home
     nginxs5:
         build: ./jenkins-nginx
-        container_name: nginxs5
+        container_name: nginx
         links:
           - jenkinss5
-#        volumes:
-#           - type: bind
-#             source: ./jenkins-nginx/jenkins.conf
-#             target: /etc/nginx/conf.d/default.conf
+        volumes:
+           - type: bind
+             source: ./jenkins-nginx/jenkins.conf
+             target: /etc/nginx/conf.d/default.conf
         ports:
         - 80:80
         - 443:443
