--- a/jenkins-nginx/Dockerfile
+++ b/jenkins-nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx
 
 COPY ./jenkins.conf /etc/nginx/conf.d/jenkins.conf
-#COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx"]
