--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
         - 80:80
         - 443:443
         restart: always
+        depends_on:
+        - jenkins
         networks:
           - jenkins-net
 
