--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
         - 443:443
         restart: always
         depends_on:
-        - jenkins
+        - jenkinss5
         networks:
           - jenkins-net
 
