--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.7'
 
 services:
     jenkinss5:
-        image: docker.io/bitnami/jenkins
+        image: ./jenkins-master
+        user: root
         container_name: jenkinss5
         networks:
           - jenkins-net
