--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -1,3 +1,4 @@
+FROM jenkins/jenkins
 USER root
 RUN apt-get update && apt-get install -y lsb-release
 RUN curl -fsSLo /usr/share/keyrings/docker-archive-keyring.asc \
