--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3.7'
 
 services:
     jenkinss5:
-        build: ./jenkins-master
+        image: jenkins/jenkins:lts
         container_name: jenkinss5
+        privileged: true
+        user: root
         networks:
           - jenkins-net
         restart: always
@@ -13,6 +15,7 @@ services:
         volumes:
           - jenkins-log:/var/log/jenkins
           - jenkins-data:/var/jenkins_home
+          - /var/run/docker.sock:/var/run/docker.sock
     nginxs5:
         build: ./jenkins-nginx
         container_name: nginxs5
