--- a/jenkins-nginx/jenkins.conf
+++ b/jenkins-nginx/jenkins.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
+    listen 443;
     server_name localhost;
     access_log off;
 
     location / {
 
-    proxy_pass         http://jenkins:8080;
+    proxy_pass         http://jenkinss5:8080;
 
     proxy_set_header   Host             $host;
     proxy_set_header   X-Real-IP        $remote_addr;
