--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,9 @@ services:
         container_name: nginxs5
         links:
           - jenkinss5
-#        volumes:
-#          - type: bind
-#            source: ./jenkins-nginx/nginx.conf
-#            target: /etc/nginx/conf.d/default.conf
+        volumes:
+          - ./nginx/conf.d:/etc/nginx/conf.d
+          - /var/run/docker.sock:/tmp/docker.sock:ro
         ports:
         - 80:80
         - 443:443
