--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -9,4 +9,4 @@ RUN chown -R jenkins:jenkins /var/cache/jenkins
 USER jenkins
 
 ENV JAVA_OPTS='-Xmx8192m'
-ENV JENKINS_OPTS=' --handlerCountMax=300 -- logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war'
+ENV JENKINS_OPTS=' --handlerCountMax=300 --logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war'
