--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         links:
           - jenkinss5
         volumes:
-          - ./nginx/conf.d:/etc/nginx/conf.d
+          - ./jenkins-nginx:/etc/nginx/conf.d
           - /var/run/docker.sock:/tmp/docker.sock:ro
         ports:
         - 80:80
